windows: added configuration